Error message on failed auth

--- a/src/i18n/locale_en.json
+++ b/src/i18n/locale_en.json
@@ -11,7 +11,8 @@
     "LOGIN": {
       "USERNAME": "Enter your username",
       "PASSWORD": "Enter your password",
-      "TITLE": "Please, login into your account"
+      "TITLE": "Sign in to ExamsHelper",
+      "ERROR": "Invalid username or password"
     }
   }
 }
