Add custom validation to registration form
(checking if user exists by username or email)

--- a/src/i18n/locale_en.json
+++ b/src/i18n/locale_en.json
@@ -22,7 +22,12 @@
       "USERNAME": "Username",
       "PASSWORD": "Password",
       "EMAIL": "Email",
-      "BUTTON": "Join now"
+      "BUTTON": "Join now",
+      "ERROR": {
+        "EMAIL_INVALID": "Invalid email",
+        "EMAIL_TAKEN": "Email is already taken",
+        "USERNAME_TAKEN": "Username is already taken"
+      }
     }
   }
 }
