Add translation to subject details button

--- a/src/i18n/locale_en.json
+++ b/src/i18n/locale_en.json
@@ -1,5 +1,8 @@
 {
   "TITLE": "ExamsHelper",
+  "BUTTON": {
+    "APPLY": "Apply"
+  },
   "MENU": {
     "PROFILE": "Profile",
     "EXAMS": "Exams",
