Delete subject; Add confirmation dialog

--- a/src/i18n/locale_en.json
+++ b/src/i18n/locale_en.json
@@ -1,7 +1,8 @@
 {
   "TITLE": "ExamsHelper",
   "BUTTON": {
-    "APPLY": "Apply"
+    "APPLY": "Apply",
+    "DELETE": "Delete "
   },
   "MENU": {
     "PROFILE": "Profile",
