Update subject list after delete / update particular subject

--- a/src/i18n/locale_en.json
+++ b/src/i18n/locale_en.json
@@ -49,6 +49,12 @@
         "SUBMIT": "ADD",
         "CANCEL": "CANCEL"
       }
+    },
+    "DETAILS": {
+      "DELETE": {
+        "TITLE": "Delete subject",
+        "MESSAGE": "Are you sure? You will lose all your exams and statistics!"
+      }
     }
   },
   "MODAL": {
