--- a/src/i18n/locale_en.json
+++ b/src/i18n/locale_en.json
@@ -37,7 +37,11 @@
     }
   },
   "EXAMS": {
-    "EMPTY": "You haven't got any exams yet!"
+    "EMPTY": "You haven't got any exams yet!",
+    "NEW": {
+      "SUBJECT_PLACEHOLDER": "Choose subject",
+      "INPUT_LABEL": "Additional info"
+    }
   },
   "SUBJECTS": {
     "EMPTY": "You haven't got any subjects yet!",
