Add translation and scss variable

--- a/src/i18n/locale_en.json
+++ b/src/i18n/locale_en.json
@@ -37,6 +37,8 @@
     }
   },
   "EXAMS": {
+    "UPCOMING": "Upcoming",
+    "PAST": "Past",
     "EMPTY": "You haven't got any exams yet!",
     "NEW": {
       "SUBJECT_PLACEHOLDER": "Choose subject",
