Create basic 404 and 403 error pages

--- a/src/i18n/locale_en.json
+++ b/src/i18n/locale_en.json
@@ -73,6 +73,8 @@
   },
   "ERROR": {
     "UNEXPECTED": "An unexpected error occurs. Please, go to the ",
+    "NOT_FOUND": "The page you requested does not exist",
+    "FORBIDDEN": "You haven't got permission to see this resource.",
     "UNEXPECTED_LINK": "login page"
   }
 }
